force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Type_of_Power__c.field-meta.xml
<CustomField>
    <fullName>QCC_Type_of_Power__c</fullName>
    <label>Type of Power</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seat Power</fullName>
            </value>
            <value>
                <fullName>Medical Power</fullName>
            </value>
            <value>
                <fullName>Battery Power</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>