force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Units_CBBG__c.field-meta.xml
<CustomField>
    <fullName>QCC_Units_CBBG__c</fullName>
    <label>Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Centimetres</fullName>
            </value>
            <value>
                <fullName>Inches</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>