force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Update_Intelex__c.field-meta.xml
<CustomField>
    <fullName>QCC_Update_Intelex__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Intelex</label>
    <type>Checkbox</type>
</CustomField>