force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Updating_Service_Dog_Register__c.field-meta.xml
<CustomField>
    <fullName>QCC_Updating_Service_Dog_Register__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updating Service Dog Register</label>
    <type>Checkbox</type>
</CustomField>