force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Weight_of_Dog_KG__c.field-meta.xml
<CustomField>
    <fullName>QCC_Weight_of_Dog_KG__c</fullName>
    <label>Weight of Dog (KG)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>