force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Wheelchair_Amp_Hour__c.field-meta.xml
<CustomField>
    <fullName>QCC_Wheelchair_Amp_Hour__c</fullName>
    <label>Wheelchair Amp Hour</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>