force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Wheelchair_Dimensions_Width__c.field-meta.xml
<CustomField>
    <fullName>QCC_Wheelchair_Dimensions_Width__c</fullName>
    <label>Wheelchair Dimensions (Width)</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>