force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Wheelchair_Weight__c.field-meta.xml
<CustomField>
    <fullName>QCC_Wheelchair_Weight__c</fullName>
    <label>Wheelchair Weight</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>