force-app/main/default/objects/QCC_Specific_Needs__c/fields/QCC_Wheelchair_Weight_Metric__c.field-meta.xml
<CustomField>
    <fullName>QCC_Wheelchair_Weight_Metric__c</fullName>
    <label>Wheelchair Weight Metric</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kilograms (Kg)</fullName>
            </value>
            <value>
                <fullName>Pounds (Lbs)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>