force-app/main/default/objects/QCC_Specific_Needs__c/fields/Update_PNR_WC__c.field-meta.xml
<CustomField>
    <fullName>Update_PNR_WC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update PNR WC</label>
    <type>Checkbox</type>
</CustomField>