force-app/main/default/objects/QCC_Specific_Needs__c/recordTypes/Specific_Need.recordType-meta.xml
<RecordType>
    <fullName>Specific_Need</fullName>
    <active>true</active>
    <label>Specific Need</label>
</RecordType>