force-app/main/default/objects/QCC_Specific_Needs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>QCC_Case__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QCC_Dangerous_Goods_Approval_Provided__c</field>
        <operation>equals</operation>
        <value>No</value>
    </filters>
    <label>All</label>
</ListView>